=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

____________________________________________________________________
** CHANGES ALONG ref@bsc--2007/siesta-bsc--master--2.3
--------------------------------------------------------------------

2007-07-20 21:30:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-38

Summary: Updated test.mk files. New finisterrae.make

Fixed test.mk files for use with standard input for fdf.

New finisterrae.make file.

2007-07-20 18:45:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-37

Summary: FDF can now process standard input

To recover the old fdf behavior, reinit now dumps
stdin to a temporary file. 

fdf_readcluster assumes that the root node is in charge of the input
file.

If MPI is enabled, the symbol CLUSTER is automatically
defined in fdf.F90.

2007-07-18 14:15:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-36

Summary: Change in internal representation of fdf lines

To avoid excessive dynamic memory use, the "parsed line" derived type
now uses a single MAX_LENGTH (currently 132) string to hold a line,
and two integer arrays of length MAX_NTOKENS (currently 50) to index
the positions of the tokens.

2007-07-18 12:15:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-35

Summary: Fixes in spher_harm interface and in matel

Routine ylmexp in spher_harm had an old-style assumed-size
specification for its last array argument. This was "needeed"
in order to be able to abuse the meaning of the argument:
the actual argument could be two-dimensional or one-dimensional
in the calls from matel.

Now, matel always calls the routine with a two-dimensional
array, which is moreover specified as

       F(:,column:)

in order to avoid the creation of array temporaries by the
compiler. 

The pointer FFY in matel has thus been redeclared with a dummy