@@ -43,7 +43,7 @@ METIS_LIBS=$(HOME)/lib/metis/lib/libmetis.a
 FPPFLAGS= -DMPI -DFC_HAVE_FLUSH -DFC_HAVE_ABORT $(DEFS_CDF)
 DEFS= -DMPI -DFC_HAVE_FLUSH -DFC_HAVE_ABORT $(DEFS_CDF)
 
-LIBS=$(MKL_LIBS) $(NETCDF_LIBS)
+LIBS=$(MKL_LIBS) $(NETCDF_LIBS) $(METIS_LIBS)
 
 MPI_INCLUDE=.
 MPI_INTERFACE=libmpi_f90.a
